fix: Filter overflow

--- a/components/Filter/Filter.module.scss
+++ b/components/Filter/Filter.module.scss
@@ -6,7 +6,7 @@
 	position: sticky;
 	display: none;
 	overflow-y: scroll;
-	z-index: 4;
+	z-index: 3;
 	
 	.Filter__header {
 		display: flex;
@@ -121,7 +121,6 @@
 		align-items: center;
 		padding: rem(16px);
 		border-top: none;
-//		margin-top: 4px;
 		display: none;
 		position: relative;
 		z-index: 5;
